# patrol-drone

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  replay-lane.ini  stack-manifest.toml
.github/: dependabot.yml
.github/workflows/: python-quality.yml  replay-regression.yml  ros-ci.yml  sitl-nightly.yml
analysis/: README.md  e2e_check.md
analysis/foxglove/: README.md  patrol_layout.json
analysis/upload_daemon/: __init__.py  __main__.py  transport.py  upload_daemon.py
docker/: README.md
docker/dev/: Dockerfile
docker/ingest/: Dockerfile  __init__.py  __main__.py  bag_reader.py  ingest_service.py  manifest_query.py  manifest_store.py
docker/sim/: Dockerfile  entrypoint.sh
docs/: README.md  autonomous_drone_patrol_project_plan_v2.md  phase1_simulation_plan.md
docs/decisions/: 0001-distro-and-os.md  0002-ci-architecture.md  0003-phase1-bootstrap-scope.md  0004-stack-manifest-location.md  0005-manifest-derivation-and-pinning.md  0006-supply-chain-hardening-round2.md  0007-uxrce-dds-agent-from-source.md  0008-checkpoint-approach-pose.md  0009-m6-residual-findings-deferred-to-m7.md  0010-m6-capture-verified-dwell-stability-deferred.md  0011-m7-recording-verified-checkpoint-capture-count-deferred.md  0012-m4-dwell-pose-camera-framing-fix.md  0013-m8-live-bag-rate-witness.md  README.md
docs/design/: 2026-06-03-ci-workflows-design.md  2026-06-03-ci-workflows-plan.md
docs/phase1/: COMBINED-REVIEW.md  README.md
docs/phase1/01-platform/: design.md  dod.md  prd.md
docs/phase1/02-mission-control/: design.md  dod.md  prd.md
docs/phase1/03-sim-environment/: design.md  dod.md  prd.md
docs/phase1/04-perception/: design.md  dod.md  prd.md
docs/phase1/05-logging-replay/: design.md  dod.md  prd.md
docs/uat/: m3.md  m4.md
ros2_ws/: README.md
ros2_ws/src/patrol_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/patrol_bringup/config/: mission_basic.yaml  patrol_mission.yaml
ros2_ws/src/patrol_bringup/launch/: camera_bridge.launch.py  mission_basic.launch.py  mission_patrol.launch.py  patrol_perception.launch.py  patrol_world.launch.py
ros2_ws/src/patrol_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/patrol_interfaces/msg/: CheckpointCapture.msg
ros2_ws/src/patrol_logging/: package.xml  setup.py
ros2_ws/src/patrol_logging/config/: recorded_topics.yaml
ros2_ws/src/patrol_logging/launch/: record.launch.py
ros2_ws/src/patrol_logging/patrol_logging/: recorder.py
ros2_ws/src/patrol_mission/: package.xml  setup.py
ros2_ws/src/patrol_mission/patrol_mission/: commands.py  config.py  frames.py  node.py  qos.py  state_machine.py  topics.py
ros2_ws/src/patrol_perception/: package.xml  setup.py
ros2_ws/src/patrol_perception/patrol_perception/: capture_builder.py  capture_writer.py  checkpoint_config.py  checkpoint_resolver.py  coordinator.py  perception_node.py  samplers.py
scripts/: README.md  build_xrce_agent.sh  check_manifest_drift.py  check_ros_test_gate.py  check_world_drift.py  check_xrce_pins.py  env_doctor.sh  gen_build_args.py  push-to-github.sh  run_patrol_world_sitl.sh  run_sitl_mission.sh  setup_phase1.sh  verify_mission.py  verify_patrol.py
sim/: README.md
sim/config/: checkpoints.yaml
sim/models/apriltag_36h11_0/: model.config  model.sdf
sim/models/apriltag_36h11_1/: model.config  model.sdf
sim/models/apriltag_36h11_2/: model.config  model.sdf
sim/px4_sitl_overrides/gz_x500_patrol/: model.config  model.sdf
sim/tools/: compose_world.py  gen_apriltag_models.py
sim/worlds/: patrol_world.sdf  patrol_world.template.sdf
tests/: README.md
tests/integration/: dwell_tracker.py  home_settle_tracker.py  mission_acceptance.py  patrol_acceptance.py  settle_tracker.py  test_mission_basic.py  test_mission_patrol.py  test_mission_patrol_launch.py  test_patrol_world_launch.py  test_upload_ingest_standin.py
tests/replay/: README.md  assertions.yaml  rate_report.py  replay_assertions.py  test_replay_regression.py  verify_live_bag.py
tests/replay/reference/: convert_options.yaml  make_reference_bag.py
tests/replay/reference/patrol_reference/: metadata.yaml  patrol_reference_0.mcap
tests/unit/: mission_builders.py  test_abort.py  test_apriltag_models.py  test_bag_reader.py  test_camera_topic_drift.py  test_capture_builder.py  test_capture_writer.py  test_checkpoint_config.py  test_checkpoint_visibility.py  test_ci_compose_override.py  test_commands.py  test_compose_world.py  test_config.py  test_coordinator.py  test_dwell_tracker.py  test_frames.py  test_gen_build_args.py  test_home_settle_tracker.py  test_ingest_main.py  test_ingest_service.py  test_manifest_drift.py  test_manifest_query.py  test_manifest_store.py  test_node_glue.py  test_perception_node_glue.py  test_rate_report.py  test_record_launch_contract.py  test_recorder.py  test_replay_assertions.py  test_resolver.py  test_ros_test_gate.py  test_run_id_validation.py  test_samplers.py  test_settle_tracker.py  test_setup_xrce.py  test_setup_xrce.sh  test_state_machine.py  test_topics.py  test_transport.py  test_upload_daemon.py  (+1 more)
