[project]
name = "patrol-drone-tooling"
version = "0.0.0"
description = "Root tooling project for Layer-A CI (lint/type/complexity/test config)."
requires-python = ">=3.12"

[tool.uv]
package = false   # virtual root: install deps/groups, do not build this as a package

[dependency-groups]
dev = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "xenon==0.9.3",
    "radon==6.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ros2_ws/src", "analysis", "scripts", "tests"]
extend-exclude = ["ros2_ws/src/external"]   # vendored px4_msgs — not our code

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "PL", "PERF", "PT", "C901"]
ignore = [
    "E501",     # line length owned by the formatter
    "PLR0913",  # "too many arguments" — overlaps complexity; xenon owns aggregate gates
]

[tool.ruff.lint.mccabe]
max-complexity = 10   # CC > 10 == radon rank C, the same boundary as xenon -b B

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
# NB: warn_unused_configs is intentionally OFF — the ROS import overrides below are
# pre-declared for modules the code may not all import yet, and would be flagged "unused".
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = false        # strict globally; only ROS roots exempted below
exclude = [
    "^\\.venv/",                       # uv's tooling venv on the runner
    "^ros2_ws/(build|install|log)/",   # colcon artifacts, if ever present
    "^ros2_ws/src/external/",          # vendored px4_msgs / px4_ros_com
    "^tests/integration/",             # live ROS env — Layer B / nightly only
    "^tests/replay/",
]
# mypy_path = "ros2_ws/src/patrol_mission"   # enable at M3 so `import patrol_mission` resolves

# Tighten the ROS-free mission core (highest bug risk).
[[tool.mypy.overrides]]
module = "patrol_mission.*"
disallow_untyped_defs = true

# ROS packages ship no PEP 561 stubs and aren't installed on the Layer-A runner.
# The trailing .* is MANDATORY — a bare `std_msgs` would not cover `std_msgs.msg`.
[[tool.mypy.overrides]]
module = [
    "rclpy", "rclpy.*",
    "px4_msgs", "px4_msgs.*",
    "px4_ros_com", "px4_ros_com.*",
    "std_msgs", "std_msgs.*",
    "sensor_msgs", "sensor_msgs.*",
    "geometry_msgs", "geometry_msgs.*",
    "builtin_interfaces", "builtin_interfaces.*",
    "patrol_interfaces", "patrol_interfaces.*",
    "rosidl_runtime_py", "rosidl_runtime_py.*",
    "ament_index_python", "ament_index_python.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests/unit"]
norecursedirs = ["tests/integration", "tests/replay", "ros2_ws/src/external"]
addopts = "-ra --strict-markers --strict-config"
# pythonpath = ["ros2_ws/src/patrol_mission"]   # enable at M3 so `import patrol_mission` works
markers = [
    "ros: test requires a sourced ROS 2 environment (Layer B / nightly only)",
]

[tool.coverage.run]
branch = true
# The 85% floor targets the ROS-free mission core only (not analysis/ or scripts/).
# Path-based source aligns with the M3 pytest pythonpath above; may switch to
# source_pkgs = ["patrol_mission"] once an editable install lands (M3 spike).
source = ["ros2_ws/src/patrol_mission/patrol_mission"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
