[project]
name = "patrol-drone-tooling"
version = "0.0.0"
description = "Root tooling project for Layer-A CI (lint/type/complexity/test config)."
requires-python = ">=3.12"

[tool.uv]
package = false   # virtual root: install deps/groups, do not build this as a package

[dependency-groups]
dev = [
    "ruff==0.15.15",
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "xenon==0.9.3",
    "radon==6.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ros2_ws/src", "analysis", "scripts", "tests", "sim/tools"]
extend-exclude = ["ros2_ws/src/external"]   # vendored px4_msgs — not our code

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "RUF", "PL", "PERF", "PT", "C901"]
ignore = [
    "E501",     # line length owned by the formatter
    "PLR0913",  # "too many arguments" — overlaps complexity; xenon owns aggregate gates
]

[tool.ruff.lint.mccabe]
max-complexity = 10   # CC > 10 == radon rank C, the same boundary as xenon -b B

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
# NB: warn_unused_configs is intentionally OFF — the ROS import overrides below are
# pre-declared for modules the code may not all import yet, and would be flagged "unused".
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = false        # strict globally; only ROS roots exempted below
exclude = [
    "^\\.venv/",                       # uv's tooling venv on the runner
    "^ros2_ws/(build|install|log)/",   # colcon artifacts, if ever present
    "^ros2_ws/src/external/",          # vendored px4_msgs / px4_ros_com
    "^tests/integration/",             # live ROS env — Layer B / nightly only
    "^tests/replay/",
    # ament_python `setup.py` shims share the basename `setup` across packages, which mypy
    # rejects as a duplicate module ("found twice under different module names"). They are
    # trivial setuptools boilerplate (no first-party logic); exclude them from type-checking.
    "^ros2_ws/src/[^/]+/setup\\.py$",
    # Launch files are ROS-runtime wiring (no first-party logic) and import `launch`/`launch_ros`,
    # which are not installed on the Layer-A runner. Like tests/integration, they belong to the
    # live-ROS tier (verified by `colcon build` + the SITL nightly), not Layer-A type-checking.
    "^ros2_ws/src/[^/]+/launch/.*\\.py$",
]
# M3: so `import patrol_mission` resolves for mypy. M5: + sim/tools so the World Composer
# (`import compose_world`, `import gen_apriltag_models`) resolves for scripts/ + tests/ that import it.
mypy_path = ["ros2_ws/src/patrol_mission", "sim/tools"]

# Tighten the ROS-free mission core (highest bug risk).
[[tool.mypy.overrides]]
module = "patrol_mission.*"
disallow_untyped_defs = true

# ROS packages ship no PEP 561 stubs and aren't installed on the Layer-A runner.
# The trailing .* is MANDATORY — a bare `std_msgs` would not cover `std_msgs.msg`.
[[tool.mypy.overrides]]
module = [
    "rclpy", "rclpy.*",
    "px4_msgs", "px4_msgs.*",
    "px4_ros_com", "px4_ros_com.*",
    "std_msgs", "std_msgs.*",
    "sensor_msgs", "sensor_msgs.*",
    "geometry_msgs", "geometry_msgs.*",
    "diagnostic_msgs", "diagnostic_msgs.*",   # M6: perception_node KeyValue (no stubs on Layer A)
    "builtin_interfaces", "builtin_interfaces.*",
    "patrol_interfaces", "patrol_interfaces.*",
    "apriltag_msgs", "apriltag_msgs.*",       # M6: AprilTagDetectionArray (no stubs on Layer A)
    "rosidl_runtime_py", "rosidl_runtime_py.*",
    "ament_index_python", "ament_index_python.*",
    "cv2", "cv2.*",                           # M6: OpenCV PNG encode seam (no PEP 561 stubs on Layer A)
    "cv_bridge", "cv_bridge.*",               # M6: sensor_msgs/Image -> cv2 (no stubs on Layer A)
    "launch", "launch.*",
    "launch_ros", "launch_ros.*",
    "setuptools", "setuptools.*",      # every ament_python package's setup.py imports it (no stubs on Layer A)
    "yaml", "yaml.*",                  # PyYAML ships no PEP 561 stubs; system dep (design §3.5 row 6)
]
ignore_missing_imports = true

# The shared M3 acceptance modules live under tests/integration/ (a live-ROS, mypy-EXCLUDED dir, so
# they ship to the nightly container via `docker cp tests`). scripts/verify_mission.py and the
# Layer-A test for the pure settle tracker — both mypy-checked — import them after a sys.path
# bootstrap mypy can't follow, so treat them as missing-stubs.
[[tool.mypy.overrides]]
module = [
    "mission_acceptance",
    "patrol_acceptance",
    "settle_tracker",
    "home_settle_tracker",
    "dwell_tracker",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests/unit"]
norecursedirs = ["tests/integration", "tests/replay", "ros2_ws/src/external"]
addopts = "-ra --strict-markers --strict-config"
# M3: makes `import patrol_mission` work for Layer-A unit tests. M5: + sim/tools for the
# World Composer / AprilTag-model generator unit tests (`import compose_world`, `gen_apriltag_models`).
# M6: + patrol_perception for the ROS-free capture core (`import patrol_perception.*`).
pythonpath = ["ros2_ws/src/patrol_mission", "ros2_ws/src/patrol_perception", "sim/tools"]
markers = [
    "ros: test requires a sourced ROS 2 environment (Layer B / nightly only)",
]

[tool.coverage.run]
branch = true
# The 85% floor targets the ROS-free mission core only (not analysis/ or scripts/).
# Path-based source aligns with the M3 pytest pythonpath above; may switch to
# source_pkgs = ["patrol_mission"] once an editable install lands (M3 spike).
source = [
    "ros2_ws/src/patrol_mission/patrol_mission",
    # M6 (04-perception): the ROS-free capture core + node logic. M6.A ships config/resolver/builder;
    # M6.B adds samplers.py + coordinator.py (rclpy-free logic, 100% unit-tested) and the rclpy
    # entrypoint perception_node.py (omitted below, mirroring patrol_mission/node.py).
    "ros2_ws/src/patrol_perception/patrol_perception",
]
# T1.7 coverage-source resolution (design §4.4.4): node.py is the rclpy plumbing layer
# (imports rclpy/px4_msgs). Its glue (telemetry/EKF gating, the stale-telemetry pause, tick
# dispatch, _issue ID mapping, warmup mutation) now has a fast PR-level guard —
# tests/unit/test_node_glue.py stubs rclpy/px4_msgs so the branch logic runs ROS-free — with full
# SITL (AC-5) as the end-to-end check. It stays OMITTED from the percentage gate by design: the
# path-based source above scopes the ≥85% floor to the whole patrol_mission package EXCEPT node.py —
# the rclpy-free core {state_machine, frames, config, commands, topics} plus qos.py (which imports
# rclpy but is exercised through test_node_glue.py's rclpy stub). node.py's publishers/main() still
# only execute under SITL, so measuring it as a percentage would mislead.
# perception_node.py (M6.B) is the same rclpy-plumbing layer: it imports rclpy/cv2/apriltag_msgs and
# only executes under SITL, so it is verified by `colcon build` + node-import + the downstream SITL
# test, not measured as a percentage. samplers.py/coordinator.py stay measured (ROS-free, 100%).
omit = [
    "ros2_ws/src/patrol_mission/patrol_mission/node.py",
    "ros2_ws/src/patrol_perception/patrol_perception/perception_node.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",  # CLI entry points (e.g. topics.py) only run as a script
]
